micro-k8s/ingressQueue.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queuecure-api-ingress
  namespace: queuecure
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /auth(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: auth-service
            port:
              number: 3002
      - path: /hospital(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: hospital-service
            port:
              number: 3001
      - path: /queue(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: queue-service
            port:
              number: 3003
      - path: /triage(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: triage-service
            port:
              number: 3004
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: queuecure-frontend-ingress
  namespace: queuecure
spec:
  ingressClassName: nginx
  rules:
  - host: myapp.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
